--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -794,10 +794,9 @@ button.item.item-button-right {
  * The hidden right-side buttons that can be exposed under a list item
  * with dragging.
  */
-.item-options {
+.item-options, .item-options-left {
   position: absolute;
   top: 0;
-  right: 0;
   z-index: $z-index-item-options;
   height: 100%;
 
@@ -812,4 +811,13 @@ button.item.item-button-right {
       margin: 0 auto;
     }
   }
+}
+
+/* [NEW] */
+.item-options{
+  right: 0;
+}
+
+.item-options-left {
+  left: 0;
 }
