--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -622,13 +622,17 @@ button.item.item-button-right {
 // -------------------------------
 
 .item-left-editable .item-content,
-.item-right-editable .item-content {
+.item-right-editable .item-content,
+.item-left-editable .item-options-left,
+.item-right-editable .item-options {
   // setup standard transition settings
   @include transition-duration( $item-edit-transition-duration );
   @include transition-timing-function( $item-edit-transition-function );
   -webkit-transition-property: -webkit-transform;
      -moz-transition-property: -moz-transform;
           transition-property: transform;
+
+  @include transition( left $item-edit-transition-duration, right $item-edit-transition-duration );
 }
 
 .list-left-editing .item-left-editable .item-content,
